fixed z-index

--- a/src/component/stylesheet.css
+++ b/src/component/stylesheet.css
@@ -77,6 +77,7 @@ header
    height:75px;
    width:100%;
    padding:1rem;
+   z-index:100;
    background-color:var(--dark);
    display: flex;
    flex-flow: row !important;
